--- a/client/package.json
+++ b/client/package.json
@@ -2,11 +2,11 @@
   "name": "client",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://LintaRahman.github.io/As-SafwahAcademy",
+  "homepage": "https://LintaRahman.github.io-As-SafwahAcademy",
   "type": "module",
   "scripts": {
-   "predeploy": "npm run build",
-   "deploy": "gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
