--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://LintaRahman.github.io-As-SafwahAcademy",
+  "homepage": "https://lintarahman.github.io/LintaRahman.github.io-As-SafwahAcademy/",
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
